--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,20 +4,30 @@ before:
   hooks:
     - go mod download
 builds:
-- env:
-  - CGO_ENABLED=0
-  main: ./cmd/kinesis-tailf/main.go
-  goarch:
-  - darwin
-  - amd64
+  - id: kinesis-tailf
+    env:
+      - CGO_ENABLED=0
+    main: ./cmd/kinesis-tailf/main.go
+    binary: kinesis-tailf
+    goarch:
+      - darwin
+      - amd64
+  - id: kinesis-cat
+    env:
+      - CGO_ENABLED=0
+    main: ./cmd/kinesis-cat/main.go
+    binary: kinesis-cat
+    goarch:
+      - darwin
+      - amd64
 archives:
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
+      - "^docs:"
+      - "^test:"
