--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,4 @@ jobs:
         uses: goreleaser/goreleaser-action@v1
         with:
           version: latest
-          args: build
+          args: build --snapshot
