--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,18 +9,25 @@ builds:
       - CGO_ENABLED=0
     main: ./cmd/kinesis-tailf/main.go
     binary: kinesis-tailf
-    goarch:
+    goos:
+      - linux
       - darwin
+      - windows
+    goarch:
+      - arm64
       - amd64
   - id: kinesis-cat
     env:
       - CGO_ENABLED=0
     main: ./cmd/kinesis-cat/main.go
     binary: kinesis-cat
-    goarch:
+    goos:
+      - linux
       - darwin
+      - windows
+    goarch:
+      - arm64
       - amd64
-archives:
 checksum:
   name_template: "checksums.txt"
 snapshot:
