--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,26 +5,26 @@ jobs:
     strategy:
       matrix:
         go:
-          - "1.21"
-          - "1.22"
+          - "1.24"
+          - "1.25"
     name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v6
         with:
           go-version: ${{ matrix.go }}
         id: go
 
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Build & Test
         run: |
           make test
 
       - name: test GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6
         with:
-          version: latest
+          version: '~> v2'
           args: build --snapshot
